fix spacing

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -126,7 +126,7 @@ body > aside nav ul {
     list-style: none;
 
     li {
-        flex: 0 0 8rem;
+        flex: 0 0 7rem;
 
         text-align: center;
 
